--- a/css/main.css
+++ b/css/main.css
@@ -562,7 +562,7 @@ p {
 
 .mailing-block .btn::after {
   content: " ";
-  background-image: url("../../img/icons/sendicon.svg");
+  background-image: url("../../img/icons/send.svg");
   background-repeat: no-repeat;
   margin-left: 10px;
   width: 24px;
