--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -638,7 +638,7 @@ h3 {
 
 .mailing-block .btn::after {
   content: " ";
-  background-image: url("../../img/icons/sendicon.svg");
+  background-image: url("../../img/icons/send.svg");
   background-repeat: no-repeat;
   margin-left: 10px;
   width: 24px;
