--- a/sass/components/_mailing-block.scss
+++ b/sass/components/_mailing-block.scss
@@ -5,7 +5,7 @@
 
 .mailing-block .btn::after {
   content: " ";
-  background-image: url("../../img/icons/sendicon.svg");
+  background-image: url("../../img/icons/send.svg");
   background-repeat: no-repeat;
   margin-left: 10px;
   width: 24px;
